# Line_Segmentation

./: Line.py  Peak.py  README.md  Region.py  Valley.py  main.py
A_Star_Line_Segmentation/: A_ Path Planning Line Segmentation Algorithm.ipynb  astar.py
Bivariate_Gauss_Line_Segmentation/: Bivariate_LineSegmentation.py  Chunk.py  LineSegmentation.py  Region.py  main.py
Bivariate_Gauss_Line_Segmentation/LineSegmentation_c/: LineSegmentation.hpp
LineSegmentation_c/: CMakeLists.txt  LineSegmentation.cpp  main.cpp
